Task_1 lesson_2 done

--- a/les_task_num.ipynb
+++ b/les_task_num.ipynb
@@ -16,9 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(array([[ 1,  6],\n        [ 2,  8],\n        [ 3, 11],\n        [ 3, 10],\n        [ 1,  7]]),\n array([2. , 8.4]))"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "first = [1, 2, 3, 3, 1]\n",
+    "second = [6, 8, 11, 10, 7]\n",
+    "a_temp1 = np.array([first])\n",
+    "a_temp2 = np.array([second])\n",
+    "a = np.hstack([a_temp1.T, a_temp2.T])\n",
+    "mean_a = a.mean(axis=0)\n",
+    "a, mean_a\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -41,9 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-1. , -2.4],\n       [ 0. , -0.4],\n       [ 1. ,  2.6],\n       [ 1. ,  1.6],\n       [-1. , -1.4]])"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_centered = a - mean_a\n",
+    "a_centered\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -66,9 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2.0"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_centered_sp = sum(a_centered[:, 0] * a_centered[:, 1])\n",
+    "itog_cov = a_centered_sp / (a.shape[0] - 1)\n",
+    "itog_cov\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -94,9 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(True,\n array([[1. , 2. ],\n        [2. , 4.3]]))"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.cov(a.T)\n",
+    "b[0,1] == itog_cov, b\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
