Task_2 lesson_2 start

--- a/les_task_pan.ipynb
+++ b/les_task_pan.ipynb
@@ -21,7 +21,14 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "author_id = [1, 2, 3]\n",
+    "author_name = ['Тургенев', 'Чехов', 'Островский']\n",
+    "book_title = ['Отцы и дети', 'Рудин', 'Дворянское гнездо', 'Толстый и тонкий', 'Дама с собачкой', 'Гроза', 'Таланты и поклонники']\n",
+    "price = [450, 300, 350, 500, 450, 370, 290]\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
