task_2_remember.ipynb done

--- a/task_2_remember.ipynb
+++ b/task_2_remember.ipynb
@@ -9,6 +9,7 @@
     }
    },
    "source": [
+    "## 1\n",
     "Создать одномерный массив Numpy под названием a из 12 последовательных целых чисел чисел от 12 до 24 невключительно"
    ]
   },
@@ -41,6 +42,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 2\n",
     "Создать 5 двумерных массивов разной формы из массива a. Не использовать в аргументах метода reshape число -1"
    ],
    "metadata": {
@@ -173,6 +175,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 3\n",
     "Создать 5 двумерных массивов разной формы из массива a. Использовать в аргументах метода reshape число -1 (в трех примерах - для обозначения числа столбцов, в двух - для строк)."
    ],
    "metadata": {
@@ -305,6 +308,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 4\n",
     "Можно ли массив Numpy, состоящий из одного столбца и 12 строк, назвать одномерным?\n",
     "\n",
     "ОТВЕТ: нельзя"
@@ -343,6 +347,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 5\n",
     "Создать массив из 3 строк и 4 столбцов, состоящий из случайных чисел с плавающей запятой из нормального распределения со средним, равным 0 и среднеквадратичным отклонением, равным 1.0. Получить из этого массива одномерный массив с таким же атрибутом size, как и исходный массив."
    ],
    "metadata": {
@@ -403,6 +408,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 6\n",
     "Создать массив a, состоящий из целых чисел, убывающих от 20 до 0 невключительно с интервалом 2."
    ],
    "metadata": {
@@ -439,6 +445,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 7\n",
     "Создать массив b, состоящий из 1 строки и 10 столбцов: целых чисел, убывающих от 20 до 1 невключительно с интервалом 2. В чем разница между массивами a и b?\n",
     "\n",
     "ОТвет: Массив a одномерный, массив b двумерный"
@@ -500,6 +507,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 8\n",
     "Вертикально соединить массивы a и b. a - двумерный массив из нулей, число строк которого больше 1 и на 1 меньше, чем число строк двумерного массива b, состоящего из единиц. Итоговый массив v должен иметь атрибут size, равный 10."
    ],
    "metadata": {
@@ -510,8 +518,48 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "outputs": [],
+   "source": [
+    "a = np.zeros((2, 2))\n",
+    "b = np.ones((3, 2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "10"
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.vstack([a, b])\n",
+    "v.size"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
+    "## 9\n",
     "Создать одномерный массив а, состоящий из последовательности целых чисел от 0 до 12. Поменять форму этого массива, чтобы получилась матрица A (двумерный массив Numpy), состоящая из 4 строк и 3 столбцов. Получить матрицу At путем транспонирования матрицы A. Получить матрицу B, умножив матрицу A на матрицу At с помощью матричного умножения. Какой размер имеет матрица B? Получится ли вычислить обратную матрицу для матрицы B и почему?"
    ],
    "metadata": {
@@ -522,8 +570,140 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(0,12)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 0,  1,  2],\n       [ 3,  4,  5],\n       [ 6,  7,  8],\n       [ 9, 10, 11]])"
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = a.reshape(4, 3)\n",
+    "A"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 0,  3,  6,  9],\n       [ 1,  4,  7, 10],\n       [ 2,  5,  8, 11]])"
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "At = A.T\n",
+    "At\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[  5,  14,  23,  32],\n       [ 14,  50,  86, 122],\n       [ 23,  86, 149, 212],\n       [ 32, 122, 212, 302]])"
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = np.dot(A, At)\n",
+    "B\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
+    "Матрица B имеет размер 4х4\n",
+    "Обратную матрицу найти не возможно так как детерминант равен 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.det(B) == 0\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 10\n",
     "Инициализируйте генератор случайных числе с помощью объекта seed, равного 42."
    ],
    "metadata": {
@@ -534,8 +714,34 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 109,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.3745401188473625"
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "a = np.random.random()\n",
+    "a\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
+    "## 11\n",
     "Создайте одномерный массив c, составленный из последовательности 16-ти случайных равномерно распределенных целых чисел от 0 до 16 невключительно."
    ],
    "metadata": {
@@ -546,8 +752,33 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 110,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([12, 14, 10,  7, 12,  4,  6,  9,  2,  6, 10, 10,  7,  4,  3,  7])"
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = np.random.randint(0,16, 16)\n",
+    "c"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
+    "## 12\n",
     "Поменяйте его форму так, чтобы получилась квадратная матрица C. Получите матрицу D, поэлементно прибавив матрицу B из предыдущего вопроса к матрице C, умноженной на 10. Вычислите определитель, ранг и обратную матрицу D_inv для D."
    ],
    "metadata": {
@@ -558,14 +789,212 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 114,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[  62,  154,  240,  327],\n       [ 152,  504,  866, 1229],\n       [ 232,  866, 1500, 2130],\n       [ 327, 1224, 2123, 3027]])"
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C = c.reshape(4, 4)\n",
+    "D = C + B * 10\n",
+    "D"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-2813615.999999922"
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.det(D) # Детерминант"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-0.02586352,  0.0892254 , -0.01380643, -0.02371752],\n       [ 0.11828195, -0.15369261, -0.10471649,  0.12330894],\n       [-0.08309663,  0.09068402,  0.24850939, -0.20270996],\n       [ 0.01324559, -0.0110932 , -0.13045846,  0.09520276]])"
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D_inv = np.linalg.inv(D)\n",
+    "D_inv # Обратная Матрица\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4"
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.matrix_rank(D) # Ранг Матрицы"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
+    "## 13\n",
     "Приравняйте к нулю отрицательные числа в матрице D_inv, а положительные - к единице. Убедитесь, что в матрице D_inv остались только нули и единицы. С помощью функции numpy.where, используя матрицу D_inv в качестве маски, а матрицы B и C - в качестве источников данных, получите матрицу E размером 4x4.  Элементы матрицы E, для которых соответствующий элемент матрицы D_inv равен 1, должны быть равны соответствующему элементу матрицы B, а элементы матрицы E, для которых соответствующий элемент матрицы D_inv равен 0, должны быть равны соответствующему элементу матрицы C."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(4, 4)"
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "razm = D_inv.shape\n",
+    "razm"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1]"
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D_tmp = D_inv.flatten()\n",
+    "D_second = []\n",
+    "for i in D_tmp:\n",
+    "    if i > 0:\n",
+    "        D_second.append(1)\n",
+    "    else:\n",
+    "        D_second.append(0)\n",
+    "D_second"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0, 1, 0, 0],\n       [1, 0, 0, 1],\n       [0, 1, 1, 0],\n       [1, 0, 0, 1]])"
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D_inv = np.array(D_second).reshape(razm)\n",
+    "D_inv"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 12,  14,  10,   7],\n       [ 14,   4,   6, 122],\n       [  2,  86, 149,  10],\n       [ 32,   4,   3, 302]])"
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E = np.where(D_inv == 1, B, C)\n",
+    "E"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
